set max-width on div#wrapper to prevent site from becoming too wide

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,11 @@ a {
     color: #5E5E5E;
 }
 
+#wrapper {
+    margin: 0 auto;
+    max-width: 1280px;
+}
+
 .container {
     width:100%;
     margin: 0px auto;
